--- a/client/views/script_builder.html
+++ b/client/views/script_builder.html
@@ -1,4 +1,6 @@
 <template name="script_builder">
+	<script src="../lib/mousetrap/mousetrap.min.js"></script>
+	{{key_cuts}}
 	<div class="row-fluid span10">
 		<div class="span5">
 			<h3 class="text-center page-header">Script Builder:</h3>
@@ -32,7 +34,7 @@
 			</div>
 			{{/isolate}}
 			<div>
-				<textarea rows="4" id="console_input" class="console_input span12" placeholder="//enter your commands here...(remember to end commmands with ';');"></textarea>
+				<textarea rows="4" id="console_input" class="console_input span12" placeholder="//enter your commands here...(remember to end commmands with ';');">{{#if chistory}}{{current_command}}{{/if}}</textarea>
 			</div>
 		</div>
 		<div class="span5">
