Added create stmt, other fixes

--- a/client/views/search_metrics.html
+++ b/client/views/search_metrics.html
@@ -80,7 +80,7 @@
 						<td class="field_result">{{used}}</td>
 					</tr>
 				</table>
-				<button name="{{_id}}" class="btn btn-inverse add_explorer_metric">Add to Script</button>
+				<button id="{{_id}}" name="{{metric_name}}" class="btn btn-inverse add_explorer_metric">Add to Script</button>
 			</div>			
 			</div>
 			</td>
