--- a/client/views/script_builder.html
+++ b/client/views/script_builder.html
@@ -24,7 +24,7 @@
 <pre class="pre-scrollable">
 >Please enter a command below to get started
 {{#each current_script}}
->{{command}}
+>{{command_block}}
 >>>{{output_text}}{{/each}}
 </pre>
 {{/isolate}}
