--- a/client/views/create_metric.html
+++ b/client/views/create_metric.html
@@ -74,9 +74,9 @@
 				<div class="control-group">
 					<label class="control-label" for="prep_sql">Preparatory SQL:</label>
 					<div class="controls">
-						<a href="#prep_sql" role="button" class="btn btn-inverse" data-toggle="modal">Add Prep SQL</a>
+						<a href="#prep_sql_prompt" role="button" class="btn btn-inverse" data-toggle="modal">Add Prep SQL</a>
 						<!-- Modal -->
-						<div id="prep_sql" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="prep_label" aria-hidden="true">
+						<div id="prep_sql_prompt" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="prep_label" aria-hidden="true">
 						  <div class="modal-header">
 						    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
 						    <h3 id="prep_label">Add Prep SQL:</h3>
@@ -86,7 +86,7 @@
 						  </div>
 						  <div class="modal-footer">
 						    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-						    <button class="btn btn-primary">Save Prep SQL</button>
+						    <button class="btn btn-primary" data-dismiss="modal" aria-hidden="true">Save Prep SQL</button>
 						  </div>
 						</div>
 					</div>
