--- a/client/views/documentation.html
+++ b/client/views/documentation.html
@@ -40,5 +40,52 @@
 		</section>
 	{{/each}}
 	</div>
-</template>						
+</template>
+
+<!--
+
+What can you do?
+
+There are 8 tabs on the left, each corresponding to a core function. 
+
+- Script builder allows you to enter commands and see the compiled SQL. 
+- Search Metrics allows you search the metric library based on a number of criteria
+- Database Explorer lets you see all of metadata (names, descriptions, recommended join conditions for databases, tables and columns) for your data sources
+- Create Metric allows you to define and store metrics (optionally) accessible by everyone in your group
+- Modify Metric allows you to suggest changes on metrics that others own, or update your own metrics
+- Settings provides a number of customization options and general account settings
+- Feedback lets you initiate a conversation with our support staff
+- Documentation gives you a resource to help master this tool
+
+
+Helping you pinpoint the information you need
+
+Search Metrics gives you a form to query the metric library. You can search based on any of the fields stored about a metric, as well as view your query history. 
+
+To the default search field is metric_name, but you can change that by adding "field_name :" to your query (where you specify field_name, i.e. join_cols).
+
+Right now multiple condition searches are not allowed, but that functionality is coming soon. 
+
+Letting you see how your data is structured, and what each column means
+
+The database explorer gives you an easy way to see all of the databases, tables, and columns in your data sources. 
+
+When you click on a database, all of the tables for that database will show up. 
+
+When you click on a table, a description for that table will show up, along with all the columns and a description of each. If you click on a column, you have the option to add the data point to your script. 
+
+Customizing your experience
+
+Here you will be able to set things like default table style, SQL variety, syntax and formatting preferences, etc...
+
+You will also be able to view and update your account information.
+
+Letting us know how we're doing
+
+The feedback form is a simple way to get in touch with us. Once you've submitted feedback, we'll review the feedback and get back to you. Once we've responded, a message will appear in your feedback section. 
+
+You can click to view, and write a reply if necessary.
+
+
+-->						
 	
