--- a/client/views/create_metric.html
+++ b/client/views/create_metric.html
@@ -1,11 +1,11 @@
 <template name="create">
 <!--Code for create_metric goes here-->
 	<div class="row-fluid span10" id="create_header">
-		<div class="span6">
-			<h2 class="text-center">Metric Preview:</h2>
+		<div class="span7">
+			<h3 class="text-center">Create Metric:</h3>
 		</div>
 		<div class="span4 pull-right">
-			<h2>Create Metric:</h2>
+			<h3>Metric Preview:</h3>
 		</div>
 	</div>	
 	<div class="row-fluid span10">
