--- a/client/views/script_builder.html
+++ b/client/views/script_builder.html
@@ -24,6 +24,7 @@
 	</div>
 	<div class="row-fluid span10">
 		<div class="span5">
+			<div id="command_input">			
 {{#isolate}}	
 <pre class="pre-scrollable">
 >Please enter a command below to get started
@@ -32,13 +33,19 @@
 >>>{{output_text}}{{/each}}
 </pre>
 {{/isolate}}
-			{{#isolate}}
-			<div>
-				<p>{{pre_run}}</p>
+				{{#isolate}}
+				<div>
+					<p>{{pre_run}}</p>
+				</div>
+				{{/isolate}}
+				<div>
+					<textarea rows="4" id="console_input" class="console_input span12" placeholder="//enter your commands here...(remember to end commmands with ';');"></textarea>
+				</div>
 			</div>
-			{{/isolate}}
-			<div>
-				<textarea rows="4" id="console_input" class="console_input span12" placeholder="//enter your commands here...(remember to end commmands with ';');"></textarea>
+			<div class="btn-group pull-left" data-toggle="buttons-radio">
+				<button id="simple_form_select" class="btn btn-inverse btn-small"><strong>Simple</strong></button>
+				<button id="command_line" class="btn btn-inverse btn-small"><strong>Command Line</strong></button>
+				<button id="command_history" class="btn btn-inverse btn-small"><strong>History</strong></button>
 			</div>
 		</div>
 		<div class="span7">
@@ -51,4 +58,129 @@
 {{/isolate}}
 		</div>
 	</div>	
-</template>			
+</template>	
+
+<template name="command_history">
+	
+	<div class="input-append">
+		<input id="query_history" type="text" class="input-xlarge" placeholder="" data-provide="typeahead" autocomplete="off">
+		<button id="history_submit" class="btn btn-inverse">Search</button>
+	</div>
+	<div>
+	<table class="table table-bordered table-condensed">
+		{{#each past_command}}
+			<tr>
+				<td><span name="{{_id}}" class="edit_history clearfix span9">{{command_block}}</span><span class="span3 pull-right clearfix"><button name="{{_id}}" class="close remove_history">&times;</button><button id="{{_id}}" class="history_add btn btn-inverse btn-small pull-right">Add</button></span></td>
+			</tr>
+		{{/each}}
+	</table>
+	</div>
+</template>
+
+<template name="simple_form">
+	<div id="simple_nav">
+		<ul class="nav nav-pills">
+			<li><a data-toggle="pill" class="simple_choose" id="simple_create">Create</a></li>
+			<li><a data-toggle="pill" class="simple_choose" id="simple_select">Select</a></li>
+			<li class="active"><a data-toggle="pill" class="simple_choose" id="simple_add_metric">Add Metric</a></li>
+			<li><a data-toggle="pill" class="simple_choose" id="simple_chain">Chain</a></li>
+			<li><a data-toggle="pill" class="simple_choose" id="simple_comment">Comment</a></li>
+		</ul>
+	</div>
+	{{#isolate}}
+	<div id="simple_form">
+		{{> add_metric_simple}}				
+	</div>
+	{{/isolate}}	
+</template>
+
+<template name="create_simple">
+	{{#isolate}}
+	<form id="simple_create_form">
+		<label>What is the table name?</label>
+		<input id="simple_create_name" type="text" class="simple-input input-xlarge" name="table_name" placeholder="table_name">
+		<label>Which columns will be in the table?</label>
+		<input id="simple_create_what" type="text" class="simple-input input-xlarge" name="cols_added" placeholder="{columns:here}">
+		<label>What is the data source?</label>
+		<input id="simple_create_from" type="text" class="simple-input input-xlarge" name="data_src" placeholder="db.table">
+		<label>Please enter any conditions:</label>
+		<input id="simple_create_how" type="text" class="simple-input input-xlarge" name="extra_sql" placeholder="{condition1:condition2:...}">
+		<label>What is the primary indice(s)?</label>
+		<input id="simple_create_index" type="text" class="simple-input input-xlarge" name="indices" placeholder="{indice1:indice2:...}">
+		<div class="clearfix">
+			<button id="simple_create_submit" class="btn btn-inverse form-actions pull-left">Submit</button>
+		</div>
+	</form>
+	{{/isolate}}
+</template>
+
+<template name="select_simple">
+	<form id="simple_select_form">
+		<label>Which columns would you like to select</label>
+		<input id="simple_select_what" type="text" class="input-xlarge" placeholder="{columns:here}">
+		<label>What is the data source?</label>
+		<input id="simple_select_from" type="text" class="input-xlarge" placeholder="db.table">
+		<label>Please enter any conditions:</label>
+		<input id="simple_select_how" type="text" class="input-xlarge" placeholder="{condition1:condition2:...}">
+		<div class="clearfix">
+		<button id="simple_select_submit" class="btn btn-inverse form-actions pull-left">Submit</button>
+		</div>
+	</form>
+</template>
+
+<template name="add_metric_simple">
+	<form id="simple_add_metric_form">
+		<label>What metric would you like to add?</label>
+		<input id="simple_metric_name" type="text" data-provide="typeahead" class="input-xlarge" placeholder="metric_name">
+		<label>What table would you like to add it to?</label>
+		<input id="simple_data_append" type="text" data-provide="typeahead" class="input-xlarge" placeholder="last">
+		<label>What columns would you like to join on?</label>
+		<input id="simple_join_cols" type="text" class="input-xlarge" place_holder="{column1:column2:...}">
+		<div class="clearfix">
+		<button id="simple_add_metric_submit" class="btn btn-inverse form-actions pull-left">Submit</button>
+		</div>
+	</form>
+</template>
+
+<template name="chain_simple">
+	<form>
+		<label>What metrics would you like to chain together?</label>
+		<input id="simple_metric_name" type="text" data-provide="typeahead" class="input-xlarge" placeholder="{metric1:metric2:...:metricN}">
+		<label>Would you like to create a permanent or temporary metric?</label>
+		<input id="simple_join_cols" type="text" class="input-xlarge" data-provide="typeahead" data-source="['permanent','temporary']">
+		<div class="clearfix">
+		<button id="simple_add_metric_submit" class="btn btn-inverse form-actions pull-left">Submit</button>
+		</div>
+	</form>
+</template>
+
+<template name="comment_simple">
+	<form id="simple_comment_form">
+		<label>What would you like your comment to say?</label>
+		<input id="simple_comment_text" type="text" data-provide="typeahead" class="input-xlarge" placeholder="enter your comment here...">
+		<div class="clearfix">
+		<button id="simple_add_metric_submit" class="btn btn-inverse form-actions pull-left">Submit</button>
+		</div>
+	</form>
+</template>
+		
+<template name="command_line">
+{{#isolate}}	
+<pre class="pre-scrollable">
+>Please enter a command below to get started
+{{#each current_script}}
+>{{command_block}}
+>>>{{output_text}}{{/each}}
+</pre>
+{{/isolate}}
+	{{#isolate}}
+	<div>
+		<p>{{pre_run}}</p>
+	</div>
+	{{/isolate}}
+	<div>
+		<textarea rows="4" id="console_input" class="console_input span12" placeholder="//enter your commands here...(remember to end commmands with ';');"></textarea>
+	</div>
+</template>
+
+								
