--- a/sql-library.css
+++ b/sql-library.css
@@ -39,3 +39,9 @@ border-radius: 10px;
 	white-space : normal;
 	word-break: break-all;
 }
+
+.remove_history
+{
+	padding-left : 5px;
+	margin-left : 5px;
+}
