--- a/client/views/database_explorer.html
+++ b/client/views/database_explorer.html
@@ -5,14 +5,18 @@
 			<h3 id="db-exp-add-header">Add Metric:</h3>
 		</div>
 		<div class="modal-body">
-			<div id="add_command_line">
-				<label><strong>Please enter a command below (defaults provided):</strong></label>
-				<input class="input-xxlarge" id="db-exp-add-command" placeholder="add_metric(..." data-provide="typeahead" autocomplete="off">		
+			<div id="db-add-body">
+				<legend>Enter some SQL, or choose from the defaults provided:</legend>
+				<div class="span12">		
+				<textarea class="span11 pull-left" id="db-command-input" rows="6" value=""></textarea>
+				<div class="btn-group span11 pull-left">
+	 					<button id="db_create_predict" name="" class="btn btn-inverse span3 text-center db-add">create</btn>
+						<button id="db_add_metric_predict" name="" class="btn btn-inverse span3 text-center db-add">add_metric</btn>
+						<button id="db_select_predict" name="" class="btn btn-inverse span3 text-center db-add">select</btn>
+						<button id="db_raw_predict" name="" class="btn btn-inverse span3 text-center db-add">raw</btn>
+				</div>
+				</div>
 			</div>
-			<br />
-			<br />
-			<br />
-			<br />
 		</div>
 		<div class="modal-footer">
 			<button class="btn btn-inverse" data-dismiss="modal" aria-hidden="true">Exit</button>
@@ -21,11 +25,11 @@
 	</div>
 	<div class="span3">
 		<h4 class="page-header explorer_header">Databases:</h4>
-		<div class="input-append explorer_search">
+		<div class="input-append explorer_search pull-left">
 		  <input id="db_search" type="text" placeholder="database_name" class="input-medium">
 		  <button id="db_query" class="btn btn-inverse" type="button">Search</button>
 		</div>
-		<div class="span3">
+		<div class="pull-left">
 			<table class="table table-condensed table-hover table-bordered">
 			{{#each databases}}
 				<tr class="db_results" name="{{database_name}}">
@@ -37,11 +41,11 @@
 	</div>
 	<div class="span3">
 		<h4 class="page-header explorer_header">Tables:</h4>
-		<div class="input-append explorer_search">
+		<div class="input-append explorer_search pull-left">
 		  <input id="table_search" type="text" placeholder="table_name" class="input-medium">
 		  <button id="table_query" class="btn btn-inverse" type="button">Search</button>
 		</div>
-		<div class="span3">
+		<div class="pull-left">
 			{{#isolate}}
 			{{#if db_selected}}
 			<table class="table table-condensed table-hover table-bordered">	
