Fixes to core, search, script builder, db exp

--- a/client/views/script_builder.html
+++ b/client/views/script_builder.html
@@ -7,7 +7,8 @@
 		</div>
 		<div class="span7">
 			<h3	class="text-center page-header">Script Preview:
-				<div class="btn-group pull-right">	
+				<div class="btn-group pull-right">
+				<button id="save_current_script" class="btn btn-inverse btn-small"><strong>Save</strong></button>	
 				<button id="clear_current_script" class="btn btn-inverse btn-small"><strong>Clear</strong></button>
 				<button id="recompile_script" class="btn btn-inverse btn-small"><strong>Recompile</strong></button>
 				<a id="script_metrics" class="btn btn-inverse btn-small dropdown-toggle" data-toggle="dropdown" href="#">Metrics<span class="caret"></span></a>
