--- a/client/views/feedback.html
+++ b/client/views/feedback.html
@@ -1,5 +1,5 @@
 <template name="feedback">
-	<div class="span6">
+	<div class="span6 offset1">
 		<form id="site_feedback">
 			<legend>Please enter your feedback below:</legend>
 			<textarea id="feedback_text" rows="6" class="span12" placeholder="We want to hear from you!"></textarea>
