tweaks, few new features

--- a/client/views/database_explorer.html
+++ b/client/views/database_explorer.html
@@ -2,18 +2,19 @@
 	<div id="db_exp_add" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="db-exp-add-header" aria-hidden="true">
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
-			<h3 id="db-exp-add-header">Add Metric:</h3>
+			<h3 id="db-exp-add-header">Command Console:</h3>
 		</div>
 		<div class="modal-body">
 			<div id="db-add-body">
-				<legend>Enter some SQL, or choose from the defaults provided:</legend>
+				<legend>Click on a command type to get started</legend>
 				<div class="span12">		
 				<textarea class="span11 pull-left" id="db-command-input" rows="6" value=""></textarea>
 				<div class="btn-group span11 pull-left">
-	 					<button id="db_create_predict" name="" class="btn btn-inverse span3 text-center db-add">create</btn>
+	 					<button id="db_create_predict" name="" class="btn btn-inverse span2 text-center db-add">create</btn>
 						<button id="db_add_metric_predict" name="" class="btn btn-inverse span3 text-center db-add">add_metric</btn>
-						<button id="db_select_predict" name="" class="btn btn-inverse span3 text-center db-add">select</btn>
-						<button id="db_raw_predict" name="" class="btn btn-inverse span3 text-center db-add">raw</btn>
+						<button id="db_select_predict" name="" class="btn btn-inverse span2 text-center db-add">select</btn>
+						<button id="db_raw_predict" name="" class="btn btn-inverse span2 text-center db-add">raw</btn>
+						<button id="db_create_metric_predict" name="" class="btn btn-inverse span3 text-center db-add">create_metric</btn>
 				</div>
 				</div>
 			</div>
