--- a/client/views/search_metrics.html
+++ b/client/views/search_metrics.html
@@ -2,11 +2,11 @@
 	<div id="search_add" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="search-add-header" aria-hidden="true">
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
-			<h3 id="search-add-header">Add Metric:</h3>
+			<h3 id="search-add-header">Command Console:</h3>
 		</div>
 		<div class="modal-body">
 			<div id="search-add-body">
-				<legend>Enter some SQL, or choose from the defaults provided:</legend>
+				<legend>Click on a command type to get started</legend>
 				<div class="span12">		
 				<textarea class="span11 pull-left" id="search-command-input" rows="6" value=""></textarea>
 				<div class="btn-group span11 pull-left">
@@ -25,7 +25,7 @@
 	</div>	
 	<div id="search_bar">
 		<div class="input-append">
-			<input type="text" id="metric_querybox" class="input-large" placeholder="field:condition">
+			<input type="text" id="metric_querybox" class="input-large" placeholder="metric_name">
 			<button id="query_metrics" class="btn btn-inverse">Search</button>
 		 	<button class="btn btn-inverse">Advanced</button>
 		</div>
