--- a/client/views/settings.html
+++ b/client/views/settings.html
@@ -11,8 +11,8 @@
 			<input class="acct_setting" type="text" id="email">
 			{{#isolate}}
 			<label>Syntax:</label>
-			<select class="acct_setting" id="num_tasks">
-				<option id="td_syntax" value="Teradata">Teradata</option>
+			<select class="acct_setting" id="syntax-type">
+				<option id="td_syntax" value="teradata">Teradata</option>
 				<option id="mysql_syntax" value="MySQL">MySQL</option>
 			</select>
 			{{/isolate}}			
